<resources>
    <string name="app_name">Android Animations Part 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


        <string name="touch_button">Touch Button Feedback</string>
        <string name="frame_animation">Frame Animation</string>
        <string name="touch_view">Touch View Feedback</string>
        <string name="transition_drawable">Transition Drawable</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>
    <string name="color">Color</string>
    <string name="transition_api_auto">Transition API (Auto)</string>
</resources>
